Temporary fix to modals’ visibility (no animations)

--- a/src/wp-content/themes/tuleva/css/main.css
+++ b/src/wp-content/themes/tuleva/css/main.css
@@ -16400,63 +16400,8 @@ sup {
   transform: translate(0, -0.5rem);
 }
 
-.animated {
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-
-.animated.infinite {
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-}
-
-@-webkit-keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-.fadeIn {
-  -webkit-animation-name: fadeIn;
-  animation-name: fadeIn;
-}
-
-@-webkit-keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-.fadeOut {
-  -webkit-animation-name: fadeOut;
-  animation-name: fadeOut;
-}
-
 .modal-full {
+  display: none;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -16465,6 +16410,9 @@ sup {
   overflow-y: auto;
   z-index: -9999;
   opacity: 0;
+}
+.modal-full.fadeIn {
+  display: inherit;
 }
 .modal-full__container {
   display: -webkit-box;
